2008-11-10  Dustin J. Mitchell <dustin@zmanda.com>
	* amar-src/amarchiver.c: fix filesize printf conversion

2008-11-10  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c, client-src/selfcheck.c: Check return
							   value of pipe.

2008-11-10  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Installcheck/Run.pm: change default DLEs
	* installcheck/amcheckdump.pl: add DLE explicitly
	* installcheck/amdevcheck.pl: add DLE explicitly
	* installcheck/amdump.pl: use the amgtar application in a dump

2008-11-10  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am: only test amfetchdump if it was built
	* installcheck/amfetchdump.pl: use arguments in the right order

2008-11-10  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Archive.swg amar-src/amar.c amar-src/amar.h: bugfixes
	* man/Makefile.am man/xml-source/amarchiver.8.xml
	  amar-src/Makefile.am amar-src/amarchiver.c: new application
	* installcheck/Makefile.am installcheck/amarchiver.pl: tests

2008-11-10  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Installcheck/Run.pm: add Expect support
	* installcheck/Makefile.am installcheck/amfetchdump.pl: amfetchdump
	  installcheck, using Expect support

2008-11-10  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/amgetconf.pl: don't setup_application() in dbclose

2008-11-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Makefile.am: Build Amanda::Application only if WANT_CLIENT.

2008-11-08  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer.pm perl/Amanda/Changer/compat.pm
	  perl/Amanda/Changer/disk.pm perl/Amanda/Changer/single.pm
	  perl/Makefile.am: entirely new perl-based changer API
	* perl/Amanda/Config.swg common-src/conffile.c common-src/conffile.h:
	  add changer subsections
	* man/xml-source/amanda.conf.5.xml: document them
	* server-src/amcheckdump.pl: use the new changer API
	* installcheck/Amanda_Changer.pl installcheck/Amanda_Changer_Compat.pl